--- a/QuanLyHoiNguoiCaoTuoi/QuanLyHoiNguoiCaoTuoi/HoatDong/ThanhVienHoatDong.xaml
+++ b/QuanLyHoiNguoiCaoTuoi/QuanLyHoiNguoiCaoTuoi/HoatDong/ThanhVienHoatDong.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:QuanLyHoiNguoiCaoTuoi"
         mc:Ignorable="d"
-        Title="Thành viên tham gia hoạt động" Height="520" Width="700" ResizeMode="CanMinimize" WindowStartupLocation="CenterOwner">
+        Title="Thành viên tham gia hoạt động" Height="520" Width="700" ResizeMode="CanMinimize" WindowStartupLocation="CenterScreen">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="1*"></ColumnDefinition>
