--- a/QuanLyHoiNguoiCaoTuoi/QuanLyHoiNguoiCaoTuoi/Quy/Duyet.xaml
+++ b/QuanLyHoiNguoiCaoTuoi/QuanLyHoiNguoiCaoTuoi/Quy/Duyet.xaml
@@ -1,11 +1,11 @@
-﻿<Window x:Class="QuanLyHoiNguoiCaoTuoi.Hop.HopBCH"
+﻿<Window x:Class="QuanLyHoiNguoiCaoTuoi.Quy.Duyet"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:QuanLyHoiNguoiCaoTuoi.Hop"
+        xmlns:local="clr-namespace:QuanLyHoiNguoiCaoTuoi.Quy"
         mc:Ignorable="d"
-        Title="Họp ban chấp hành" Height="290" Width="400" ResizeMode="CanMinimize" WindowStartupLocation="CenterScreen">
+        Title="Duyet" Height="280" Width="400" ResizeMode="CanMinimize" WindowStartupLocation="CenterScreen">
     <Window.Resources>
 
     </Window.Resources>
@@ -20,25 +20,26 @@
             <RowDefinition Height="40"></RowDefinition>
             <RowDefinition Height="40"></RowDefinition>
             <RowDefinition Height="40"></RowDefinition>
+
             <RowDefinition Height="35"></RowDefinition>
         </Grid.RowDefinitions>
         <Label x:Name="lblTitle" Grid.Row="0" Grid.ColumnSpan="2" Style="{StaticResource Title}" Content="AQqpPHJjkK"></Label>
 
-        <Label Grid.Row="1" Grid.Column="0" Style="{StaticResource Label}">Năm:</Label>
-        <ComboBox x:Name="cmbNam" Grid.Row="1" Grid.Column="1" Style="{StaticResource InputComboBox}" />
+        <Label Grid.Row="1" Grid.Column="0" Style="{StaticResource Label}">Người duyệt:</Label>
+        <ComboBox x:Name="cmbNguoiDuyet" Grid.Row="1" Grid.Column="1" Style="{StaticResource InputComboBox}" />
         
-        <Label Grid.Row="2" Grid.Column="0" Style="{StaticResource Label}">Tháng:</Label>
-        <ComboBox x:Name="cmbThang" Grid.Row="2" Grid.Column="1" Style="{StaticResource InputComboBox}" />
+        <Label Grid.Row="2" Grid.Column="0" Style="{StaticResource Label}">Nội dung chi:</Label>
+        <TextBox x:Name="txbNoiDung" Grid.Row="2" Grid.Column="1" Style="{StaticResource InputText}" />
 
-        <Label Grid.Row="3" Grid.Column="0" Style="{StaticResource Label}">Lần họp:</Label>
-        <TextBox x:Name="txbLanHop" Grid.Row="3" Grid.Column="1" Style="{StaticResource InputText}" />
+        <Label Grid.Row="3" Grid.Column="0" Style="{StaticResource Label}">Số tiền:</Label>
+        <TextBox x:Name="txbSoTien" Grid.Row="3" Grid.Column="1" Style="{StaticResource InputText}" />
 
-        <Label Grid.Row="4" Grid.Column="0" Style="{StaticResource Label}">Nội dung:</Label>
-        <TextBox x:Name="txbNoiDung" Grid.Row="4" Grid.Column="1" Style="{StaticResource InputText}" />
+        <Label Grid.Row="4" Grid.Column="0" Style="{StaticResource Label}">Hoạt động:</Label>
+        <ComboBox x:Name="cmbHoatDong" Grid.Row="4" Grid.Column="1" Style="{StaticResource InputComboBox}" />
 
         <StackPanel Grid.Row="5" Grid.Column="1" Orientation="Horizontal" Margin="5,10,5,0" HorizontalAlignment="Right">
             <Button x:Name="btnOK" Style="{StaticResource ButtonOK}" Width="50" Margin="5,0" IsDefault="True" Click="btnOK_Click">
-                OK
+                Duyệt
             </Button>
             <Button x:Name="btnClose" Style="{StaticResource ButtonClose}" Margin="5,0" Width="50" IsCancel="True" >
                 Close
