--- a/QuanLyHoiNguoiCaoTuoi/QuanLyHoiNguoiCaoTuoi/TaiKhoan/DangNhap.xaml
+++ b/QuanLyHoiNguoiCaoTuoi/QuanLyHoiNguoiCaoTuoi/TaiKhoan/DangNhap.xaml
@@ -1,14 +1,11 @@
-﻿<Window x:Class="QuanLyHoiNguoiCaoTuoi.CLB"
+﻿<Window x:Class="QuanLyHoiNguoiCaoTuoi.TaiKhoan.DangNhap"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:QuanLyHoiNguoiCaoTuoi"
+        xmlns:local="clr-namespace:QuanLyHoiNguoiCaoTuoi.TaiKhoan"
         mc:Ignorable="d"
-        Title="Câu lạc bộ" Height="200" Width="400" ResizeMode="CanMinimize" WindowStartupLocation="CenterScreen">
-    <Window.Resources>
-
-    </Window.Resources>
+        Title="Đăng nhập" Height="200" Width="400" ResizeMode="CanMinimize" WindowStartupLocation="CenterScreen">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="1*"></ColumnDefinition>
@@ -22,20 +19,19 @@
         </Grid.RowDefinitions>
         <Label x:Name="lblTitle" Grid.Row="0" Grid.ColumnSpan="2" Style="{StaticResource Title}" Content="AQqpPHJjkK"></Label>
 
-        <Label Grid.Row="1" Grid.Column="0" Style="{StaticResource Label}">Tên câu lạc bộ:</Label>
-        <TextBox x:Name="txbTenCLB" Grid.Row="1" Grid.Column="1" Style="{StaticResource InputText}" />
+        <Label Grid.Row="1" Grid.Column="0" Style="{StaticResource Label}">Username:</Label>
+        <TextBox x:Name="txbUsername" Grid.Row="1" Grid.Column="1" Style="{StaticResource InputText}" />
 
-        <Label Grid.Row="2" Grid.Column="0" Style="{StaticResource Label}">Người quản lý:</Label>
-        <ComboBox x:Name="cmbQuanLy" Grid.Row="2" Grid.Column="1" Style="{StaticResource InputComboBox}" />
-        
+        <Label Grid.Row="2" Grid.Column="0" Style="{StaticResource Label}">Password:</Label>
+        <PasswordBox x:Name="txbPassword" Grid.Row="2" Grid.Column="1" Style="{StaticResource InputPassword}" />
+
         <StackPanel Grid.Row="3" Grid.Column="1" Orientation="Horizontal" Margin="5,10,5,0" HorizontalAlignment="Right">
-            <Button x:Name="btnOK" Style="{StaticResource ButtonOK}" Width="50" Margin="5,0" IsDefault="True" Click="btnOK_Click">
-                OK
+            <Button x:Name="btnLogin" Style="{StaticResource ButtonOK}" Width="100" Margin="5,0" IsDefault="True" >
+                Đăng nhập
             </Button>
-            <Button x:Name="btnClose" Style="{StaticResource ButtonClose}" Margin="5,0" Width="50" IsCancel="True" >
-                Close
+            <Button x:Name="btnExit" Style="{StaticResource ButtonClose}" Margin="5,0" Width="50" IsCancel="True" >
+                Thoát
             </Button>
         </StackPanel>
-
     </Grid>
 </Window>
