--- a/QuanLyHoiNguoiCaoTuoi/QuanLyHoiNguoiCaoTuoi/ThanhVien/ThongTinBanChapHanh.xaml
+++ b/QuanLyHoiNguoiCaoTuoi/QuanLyHoiNguoiCaoTuoi/ThanhVien/ThongTinBanChapHanh.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:QuanLyHoiNguoiCaoTuoi"
         mc:Ignorable="d"
-        Title="ThongTinBanChapHanh" Height="660" Width="600" ResizeMode="CanMinimize" WindowStartupLocation="CenterOwner">
+        Title="ThongTinBanChapHanh" Height="660" Width="600" ResizeMode="CanMinimize" WindowStartupLocation="CenterScreen">
     <Window.Resources>
 
     </Window.Resources>
