--- a/QuanLyHoiNguoiCaoTuoi/QuanLyHoiNguoiCaoTuoi/TimKiemThogKe/ThongKeThanhVienHoatDong.xaml
+++ b/QuanLyHoiNguoiCaoTuoi/QuanLyHoiNguoiCaoTuoi/TimKiemThogKe/ThongKeThanhVienHoatDong.xaml
@@ -1,41 +1,38 @@
-﻿<Window x:Class="QuanLyHoiNguoiCaoTuoi.CLB"
+﻿<Window x:Class="QuanLyHoiNguoiCaoTuoi.TimKiemThogKe.ThongKeThanhVienHoatDong"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:QuanLyHoiNguoiCaoTuoi"
+        xmlns:local="clr-namespace:QuanLyHoiNguoiCaoTuoi.TimKiemThogKe"
         mc:Ignorable="d"
-        Title="Câu lạc bộ" Height="210" Width="400" ResizeMode="CanMinimize" WindowStartupLocation="CenterScreen">
-    <Window.Resources>
-
-    </Window.Resources>
+        Title="Thống kê thành viên tham gia hoạt động" Height="520" Width="500">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="1*"></ColumnDefinition>
-            <ColumnDefinition Width="2*"></ColumnDefinition>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="45"></RowDefinition>
-            <RowDefinition Height="40"></RowDefinition>
-            <RowDefinition Height="40"></RowDefinition>
+            <RowDefinition Height="200"></RowDefinition>
+            <RowDefinition Height="200"></RowDefinition>
             <RowDefinition Height="35"></RowDefinition>
         </Grid.RowDefinitions>
         <Label x:Name="lblTitle" Grid.Row="0" Grid.ColumnSpan="2" Style="{StaticResource Title}" Content="AQqpPHJjkK"></Label>
 
-        <Label Grid.Row="1" Grid.Column="0" Style="{StaticResource Label}">Tên câu lạc bộ:</Label>
-        <TextBox x:Name="txbTenCLB" Grid.Row="1" Grid.Column="1" Style="{StaticResource InputText}" />
+        <DataGrid Grid.Row="1" >
 
-        <Label Grid.Row="2" Grid.Column="0" Style="{StaticResource Label}">Người quản lý:</Label>
-        <ComboBox x:Name="cmbQuanLy" Grid.Row="2" Grid.Column="1" Style="{StaticResource InputComboBox}" />
-        
+        </DataGrid>
+
+        <DataGrid Grid.Row="2">
+
+        </DataGrid>
+
         <StackPanel Grid.Row="3" Grid.Column="1" Orientation="Horizontal" Margin="5,10,5,0" HorizontalAlignment="Right">
-            <Button x:Name="btnOK" Style="{StaticResource ButtonOK}" Width="50" Margin="5,0" IsDefault="True" Click="btnOK_Click">
+            <Button x:Name="btnOK" Style="{StaticResource ButtonOK}" Width="50" Margin="5,0" IsDefault="True">
                 OK
             </Button>
             <Button x:Name="btnClose" Style="{StaticResource ButtonClose}" Margin="5,0" Width="50" IsCancel="True" >
                 Close
             </Button>
         </StackPanel>
-
     </Grid>
 </Window>
